<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/happytoenjoyus"
        android:textSize="26sp"
        />
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_welcomereg"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/edittextconfig"
        android:hint="@string/firstname"
        android:id="@+id/et_FirstName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/edittextconfig"
        android:hint="@string/lastname"
        android:id="@+id/et_lastName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/edittextconfig"
        android:hint="@string/email"
        android:id="@+id/et_email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:inputType="textPassword"
        android:layout_margin="10dp"
        android:background="@drawable/edittextconfig"
        android:hint="@string/pwd"
        android:id="@+id/et_pwd"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:inputType="textPassword"
        android:layout_margin="10dp"
        android:background="@drawable/edittextconfig"
        android:hint="@string/repwd"
        android:id="@+id/et_repwd"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonwithbackground"
        android:layout_marginBottom="10dp"
        android:text="@string/signup"
        android:id="@+id/btn_register"/>

</LinearLayout>