<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".LoginRegisterActivity">
    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@mipmap/ic_second"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/discr"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonwithbackground"
        android:layout_marginBottom="10dp"
        android:text="@string/login"
        android:id="@+id/btn_login"/>
    <Button
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:background="@drawable/button_radiues"
        android:text="@string/register"
        android:id="@+id/btn_register"/>

</LinearLayout>